yes/css/main.css
/* ... */
.footer__social .footer__vk:hover,
.footer__social .footer__insta:hover,
.footer__social .footer__youtube:hover,
.footer__social .footer__ok:hover {
  fill: #e4002b;
}

.footer__adress {
  grid-area: 2 / 2 / 3 / 3;
}

.footer__mobile-phone {
  grid-area: 2 / 3 / 3 / 3;
  text-align: center;
}

.footer__header-link {
  grid-area: 2 / 4 / 3 / 5;
  text-align: right;
  color: #f5112c;
  text-decoration: none;
  cursor: pointer;
}

.footer__header-link:after {
  -webkit-transform: translateX(20px);
  -ms-transform: translateX(20px);
  transform: translateX(20px);
  display: block;
  content: '';
  height: 2px;
  width: 0%;
  background-color: #f5112c;
  opacity: 0.5;
  -webkit-transition: width .3s ease-in-out;
  transition: width .3s ease-in-out;
}

.footer__header-link:hover:after {
  width: 153px;
}

.call-modal {
  display: none;
  position: fixed;
  top: 50%;
  left: 50%;
  padding-top: 126px;
  padding-left: 145px;
  padding-right: 145px;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  width: 835px;
  height: 540px;
  background-color: #ffffff;
  z-index: 1010;
}

.call-modal .call-modal__close {
  position: absolute;
  top: 28px;
  right: 28px;
  width: 18px;
  height: 18px;
  cursor: pointer;
}

.call-modal .call-modal__title {
  margin-bottom: 29px;
  color: #000000;
  font-family: "Gilroy - Extra Bold";
  font-size: 34px;
  text-transform: uppercase;
  letter-spacing: 1.7px;
  text-align: center;
}

.call-modal .call-modal__description {
  margin-bottom: 23px;
  color: #141414;
  text-align: center;
  font-size: 18px;
  line-height: 24px;
  letter-spacing: 0.9px;
}

.call-modal__form .call-modal__input {
  display: block;
  width: 370px;
  height: 70px;
  margin: 0 auto;
  margin-bottom: 17px;
  padding-right: 47px;
  padding-left: 47px;
  border-radius: 35px;
  border: 1px solid #bababa;
  opacity: 0.34;
  color: #141414;
  font-size: 18px;
  line-height: 24px;
  letter-spacing: 0.9px;
}

.call-modal__form .call-modal__input:hover {
  border: 3px solid #f5112c;
}

.call-modal__form .call-modal__input:focus {
  border: 3px solid #f5112c;
}

.call-modal__form .call-modal__button {
  display: block;
  width: 370px;
  height: 70px;
  border: 1px solid #f5112c;
  margin: 0 auto;
  box-shadow: 0 10px 18px rgba(246, 27, 60, 0.55);
}

.call-modal__form .call-modal__button:hover {
  background-color: #f32b4c;
}

.modal-overlay {
  display: none;
  z-index: 1000;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #656565;
  opacity: 0.9;
}

.open {
  display: block;
}

html {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

a:focus,
a:active,
button::-moz-focus-inner,
input[type="reset"]::-moz-focus-inner,
input[type="button"]::-moz-focus-inner,
input[type="submit"]::-moz-focus-inner,
select::-moz-focus-inner,
input[type="file"] > input[type="button"]::-moz-focus-inner {
  border: 0;
  outline: 0;
}

h1,
h2,
h3,
h4,
p {
  margin: 0;
  padding: 0;
}

body {
  font-size: 18px;
  position: relative;
  min-width: 320px;
  font-family: Gilroy;
  font-weight: 300;
  line-height: 24px;
  background-color: #ffffff;
  margin: 0;
  padding: 0;
}

img {
  max-width: 100%;
  height: auto;
}

* {
  box-sizing: border-box;
}

.button {
  max-width: 378px;
  min-height: 70px;
  border-radius: 35px;
  background-color: #f5112c;
  font-family: "Gilroy - Extra Bold";
  color: #ffffff;
  font-size: 18px;
  font-weight: 400;
  line-height: 24px;
  letter-spacing: 0.9px;
  cursor: pointer;
}
/* ... */

